<resources>
    <string name="app_name">Deco Arte</string>
    <string name="Email">Email</string>
    <string name="Contraseña">Contraseña</string>
    <string name="Ingresar">Ingresar</string>
    <string name="Registrarse">Registrarse</string>
    <string name="Cerrar_Session">Cerrar Session</string>
    <string name="Proveedor">Proveedor</string>
    <string name="title_activity_register">Register</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="Nombres">Nombres</string>
    <string name="Apellidos">Apellidos</string>
    <string name="fechaNac">Fecha de Nacimiento</string>
    <string name="telefono">Telefono</string>
    <string name="regresar">Regresar</string>
    <string name="guardar">Guardar</string>
    <string name="repetirClave">Repetir Contraseña</string>
    <string name="cedula">Cédula</string>
    <string name="textview">TextView</string>
    <string name="Presentación">presentación</string>
    <string name="Inicio">INICIAR SESIÓN</string>
    <string name="Olvidar">Olvidaste tu contraseña?</string>
    <string name="direccion">"Direción Domiciliaria "</string>
    <string name="ciudad">Ciudad</string>
    <string name="domicilio">Domicilio</string>
    <string name="registro">Registrarse</string>
    <string name="obligación">Llenar todos los campos ya que son obligatorios.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Novedades">Novedades</string>
    <string name="prefs_file">com.ksaucedo.deco_arte_v2.PREFERENCE_FILE_KEY</string>
    <string name="submit" />
    <string name="inicio">Inicio</string>
    <string name="nueva_novedad">Agregar novedad</string>
    <string name="todo">TODO</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="dialog_start_game" />
    <string name="start" />
    <string name="cancel" />
    <string name="signin" />
    <string name="descripcion">Descripcion</string>
    <string name="fechaInicio">Fecha Inicio</string>
    <string name="fechaFin">Fecha Fin</string>
    <string name="agregar_a_carro">Agregar a Carro</string>
    <string name="buscar">buscar</string>
    <string name="cuenta">Cuenta</string>
    <string name="cerra">Cerrar Sesion</string>

</resources>